# unizyy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/Database/: DatabaseManager.cpp  DatabaseManager.h
Core/Models/: Course.h  Designation.h  Notice.cpp  Notice.h  Role.h  Transaction.h  admintype.h  date.cpp  date.h  department.h  hall.h
Core/Utils/: StringHelper.h
Documentation/: CLASS_REFERENCE.md  PROJECT_COMPLETION_SUMMARY.txt  PROJECT_PROGRESS.txt
System/Authentication/: auth.cpp  auth.h
System/Interface/: AdminInterface.cpp  AdminInterface.h  DiningAuthorityInterface.cpp  DiningAuthorityInterface.h  MainMenu.cpp  MainMenu.h  MenuInterface.cpp  MenuInterface.h  NoticeManagerInterface.cpp  NoticeManagerInterface.h  PublicRelationsAdminInterface.cpp  PublicRelationsAdminInterface.h  StudentInterface.cpp  StudentInterface.h  TeacherInterface.cpp  TeacherInterface.h
System/Modules/Meal/: meal.cpp  meal.h
System/Users/: Admin.cpp  Admin.h  DiningAuthority.cpp  DiningAuthority.h  NoticeManager.cpp  NoticeManager.h  PublicRelationsAdmin.cpp  PublicRelationsAdmin.h  Teacher.cpp  Teacher.h  student.cpp  student.h  user.h
